--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -43,14 +43,12 @@
     </header>
 
     <!-- END templateux-navbar -->
-    <section class="templateux-hero"  data-scrollax-parent="true" id="constructionjunction">
-      <!-- <div class="cover" data-scrollax="properties: { translateY: '30%' }"><img src="images/hero_2.jpg" /></div> -->
-
+    <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
-          <div class="col-md-10" data-aos="fade-up" >
-            <h1>CONSTRUCTION JUNCTION</h1>
-          </div>
+          <!-- <div class="col-md-14" data-aos="fade-up" > -->
+            <img src="images/CJ/Artboard.jpg" alt="Image placeholder" width="1280">
+       <!--    </div> -->
         </div>
       </div>
     </section>
