made changes to construction junction file. replace old files.

--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -86,6 +86,7 @@
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
                 <p class="description1">This project was part of my Advanced Interaction Design studio. Teams were randomly assigned to a local Pittsburgh company. My team was assigned Construction Junction, which is a large non-profit warehouse supplying surplus construction materials & appliances at reduced prices.</p>
+                <iframe width="500" height="300" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
           <!-- </div> -->
