made changes to newlemon page

--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -86,7 +86,8 @@
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
                 <p class="description1">This project was part of my Advanced Interaction Design studio. Teams were randomly assigned to a local Pittsburgh company. My team was assigned Construction Junction, which is a large non-profit warehouse supplying surplus construction materials & appliances at reduced prices.</p>
-                <iframe width="500" height="300" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
               </div>
             </div>
           <!-- </div> -->
@@ -94,22 +95,23 @@
            <div class="row mb-5">
               <div class="col-md-12">
                 <p id="rowoverview2">02 Solution</p>
-                  <p class="description1">To address the knowledge gap in the communitu about Construction Junction's larger mission of promoting conservation and reuse, my team and I came up with Junction Journey: a mobile application geared towards kids that uses gamification and learning science principles to create a fun environment for children to learn about sustainability and conservation.</p><br></br>
+                  <p class="description1">To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team<br>and I came up with Junction Journey: a mobile application geared towards kids that uses gamification and learning science principles to create<br>a fun environment for children to learn about sustainability and conservation.</p><br>
 
-                  <b>Application Basics</b><br>
-                  01 <b>Competition with Other Schools</b><br>
-                  02 <b>Learning about Furniture Reuse through microinteractions</b><br>
-                  03 <b>Raising awareness about Reuse Events/Community Events</b><br></br>
+                  <p class="description1"><b>Application Basics</b><br>
+                  01 Competition with Other Schools<br>
+                  02 Learning about Furniture Reuse through microinteractions<br>
+                  03 Raising awareness about Reuse Events/Community Events</p><br>
 
-                  Junction Journey would not only be training the next generation, but would also be penetrating a much larger audience in Pittsburgh: schools and educators - simply by their interaction with children on a daily basis.</p>
+                  <iframe width="500" height="300" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
-                  Many Pittsburgh community members referred to Construction Junction as the “junkyard” or the “scrapyard.”
-
-                  <p id="subheader"></p>
+                  <p class="description1">Junction Journey would not only be training the next generation, but would also be penetrating a much larger audience in Pittsburgh: schools and educators - simply by their interaction with children on a daily basis.</p>
              </div>
              <div class="col-md-6">
                 <p id="rowoverview2">03 Initial Research</p>
                  <p class="description1">My team first tried to understand Construction Junction’s goals and business model to figure out where the opportunity space lay. We did some research on what Construction Junction was, including their mission and what products they sell. We additionally discussed their involvement with community organizations, since they are a non-profit organization.</p>
+
+                 Many Pittsburgh community members referred to Construction Junction as the “junkyard” or the “scrapyard.”
+
               </div>
               <div class="col-md-6">
                 <p class="text-center mb-4"><img src="images/CJ/whatis.png" alt="Image placeholder" class="img-fluid" width="80%"></p>
