--- a/newlemon.html
+++ b/newlemon.html
@@ -102,7 +102,7 @@
 
                 </p>
                 <br>
-                <img src="images/lemon/conceptbutton.png" alt="Image placeholder" width="30%">
+                <a href="newlemon.html#concept"><img src="images/lemon/conceptbutton.png" alt="Image placeholder" width="30%"></a>
               </div>
               <!--section 3-->
               <div class="col-md-6">
@@ -214,7 +214,7 @@
                 <img src="images/lemon/logos.png" alt="Image placeholder" width="80%"><br></br>
                 <img src="images/lemon/posters.png" alt="Image placeholder" width="80%">
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="concept">
                 <br>
                 <p id="rowoverview2">08 Final Concept</p>
                 <p class="description1">The final concept is a simple digital service tracks food and prevents waste through scanning your grocery receipts. Specifically it can:<br>01 give reminders to check on produce/track spoilage data<br>02 recommend grocery proportions for the future<br>03 give repurposing ideas (DIY cleaners)</p><br>
@@ -223,10 +223,10 @@
                 <img src="images/lemon/teamposter.png" alt="Image placeholder" width="80%"><br>
               </div>
               <div class="col-md-6">
-                <iframe width="500" height="300" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="280" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class="col-md-12">
-                <br>
+                <br></br>
                 <img src="images/lemon/screendesign.png" alt="Image placeholder" width="100%"><br></br><br>
               </div>
               <div class="col-md-12">
