made changes to the intro of CJ

--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -58,6 +58,7 @@
     <section class="templateux-portfolio-overlap mb-5" id="next">
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
+          <!--intro section-->
           <div class="col-md-14">
             <p id="rowoverview2">01 Overview</p>
             <p id="subheader">Quick Summary</p>
@@ -85,74 +86,59 @@
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
-                <p class="description1">This project was part of my Advanced Interaction Design studio. Teams were randomly assigned to a local Pittsburgh company. My team was assigned Construction Junction, which is a large non-profit warehouse supplying surplus construction materials & appliances at reduced prices.</p>
-
-
+                <p class="description1">This project was part of my Advanced Interaction Design studio. Teams were <b>randomly assigned</b> to a local Pittsburgh company. My team was assigned <b>Construction Junction</b>, which is a large non-profit warehouse supplying surplus construction materials & appliances at reduced prices.</p>
+            <!--section 2-->
               </div>
             </div>
-          <!-- </div> -->
-          <!-- <img src="images/CJ/breakline.jpg" id="break" width=1268> -->
+
            <div class="row mb-5">
               <div class="col-md-12">
                 <p id="rowoverview2">02 Solution</p>
-                  <p class="description1">To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team<br>and I came up with Junction Journey: a mobile application geared towards kids that uses gamification and learning science principles to create<br>a fun environment for children to learn about sustainability and conservation.</p><br>
+                  <p class="description1">To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team<br>and I came up with Junction Journey: a <b>mobile application</b> geared towards kids that uses gamification and learning science principles to create<br>a fun environment <b>for children to learn about sustainability and conservation.</b></p><br>
 
                   <p class="description1"><b>Application Basics</b><br>
-                  01 Competition with Other Schools<br>
-                  02 Learning about Furniture Reuse through microinteractions<br>
-                  03 Raising awareness about Reuse Events/Community Events</p><br>
+                  01 Competition with other schools<br>
+                  02 Learning about furniture reuse through microinteractions<br>
+                  03 Raising awareness about reuse events/community events</p>
+                  <iframe width="500" height="300" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br></br>
 
-                  <iframe width="500" height="300" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-
-                  <p class="description1">Junction Journey would not only be training the next generation, but would also be penetrating a much larger audience in Pittsburgh: schools and educators - simply by their interaction with children on a daily basis.</p>
+                  <p class="description1">Junction Journey would not only be training the next generation, but would<br>also be penetrating <b>a much larger audience in Pittsburgh: schools and<br>educators</b> - simply by their interaction with children on a daily basis.</p><br>
+                   <a href="junctionjourney.html#finalprototype"><img src="images/CJ/conceptbutton.png" alt="Image placeholder" width="30%"></a>
              </div>
+             <!--section 3-->
              <div class="col-md-6">
+                <br></br>
                 <p id="rowoverview2">03 Initial Research</p>
-                 <p class="description1">My team first tried to understand Construction Junction’s goals and business model to figure out where the opportunity space lay. We did some research on what Construction Junction was, including their mission and what products they sell. We additionally discussed their involvement with community organizations, since they are a non-profit organization.</p>
-
-                 Many Pittsburgh community members referred to Construction Junction as the “junkyard” or the “scrapyard.”
-
+                 <p class="description1">My team first tried to understand Construction Junction’s goals and business model to <b>figure out where the opportunity space lay</b>, looking at their mission and products, along with how they are involved with the community, since they are a non-profit organization. Upon initial analysis, we found that many community members refer to Construction as <b>the "junkyard".</b></p>
               </div>
               <div class="col-md-6">
-                <p class="text-center mb-4"><img src="images/CJ/whatis.png" alt="Image placeholder" class="img-fluid" width="80%"></p>
+                <p class="text-center mb-4" id="push"><img src="images/CJ/whatis.png" alt="Image placeholder" class="img-fluid" width="120%"></p>
               </div>
               <br>
               <div class="col-md-6">
                 <br>
                 <p id="subheader">Problem Discovery</p>
-                  <p class="description1">After doing some analysis we realized that the Construction Junction business model has a two-fold purpose:<br></br>
-                  <b>01 They make money by accepting donations and selling reused goods</b><br>
-                  <b>02 Their underlying goal is to promote reuse and recycling in the Pittsburgh community through facility tours and workshops.</b></p>
+                  <p class="description1">After doing some analysis we realized that the <b>Construction Junction business model has a two-fold purpose:</b> buying and selling reused goods along with promoting reuse and recycling in the Pittsburgh community through facility tours and workshops.</p>
                 <p class="description1"> You can see this even by taking a quick look at their website- <b>more than half of the information is dedicated to this mission of reuse.</b></p>
               </div>
               <div class="col-md-12">
-                <p class="text-center mb-4"><img src="images/CJ/reuse.png" alt="Image placeholder" class="img-fluid" width="80%"></p>
+                <img src="images/CJ/reuse.png" alt="Image placeholder" class="img-fluid" width="80%">
               </div>
               <div class="col-md-12">
+                <br>
                 <p class="description1">
-                To find areas of improvement in Construction Junction's two-part business model, my team and I conducted a comprehensive review of their social media channels, spoke with construction junction employees and shoppers, and also surveyed local Pittsburgh community members as to whether people even knew about Construction Junction.</p>
-
-
+                To find areas of improvement in Construction Junction's two-part business model, we conducted a <b>comprehensive review of their social media channels, spoke with Construction Junction employees and shoppers, and also surveyed local community members</b> as to whether people even knew about Construction Junction.</p><br>
+                <img  id="peep" src="images/CJ/socialanalysis.png" alt="Image placeholder" class="img-fluid" width="110%">
               </div>
 
 
-              </div>
-             <div class="row mb-5">
-              <div class="col-md-6">
-                <p id="subheader">Problem</p>
-                <p class="text">My team first tried to understand Construction Junction's goals and business model to figure out where the opportunity space lay. We did some initial research on what Construction Junction is, including their mission and what products they sell. Additionally, there was discussion of their involvement with community organizations, since they are a nonprofit organization. Below is a list of key terms that kept coming up in our research.
-                <ENTER IMAGE>
 
 
 
-                <p id="subheader">Our Approach</p>
+
 
                 <!-- <strong><a href="https://framer.cloud/ZIOOL" style="color:black">Click to View Final Prototype</a></strong> -->
-                <p class="text">To address the <mark style="background-color:#9ACD32">knowledge gap in the community about Construction Junction's larger mission of promoting conservation, my team and I came up with Junction Journey: a mobile application for kids that uses game theory</mark> to create a fun environment for children to learn about sustainability and conservation. Through competing with other schools for sustainability challenges and learning about furniture reuse, Junction Journey would not only be training the next generation, but they would also be <mark style="background-color:#ffffCC">penetrating a much larger audience: schools and educators</mark> - simply by their interaction with children on a daily basis.</p>
-              </div>
-            </div>
-            <p class="text-center mb-5"><img src="images/CJ/CJ2.jpg" alt="Image placeholder" class="img-fluid"></p>
-            <p>Some of the final screens showing the competitive nature </p>
+
             <div class="row mb-5">
               <div class="col-md-6">
                 <p id="rowoverview2">02 Exploratory Research</p>
