made edits to CJ - changed margins

--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -127,8 +127,35 @@
               <div class="col-md-12">
                 <br>
                 <p class="description1">
-                To find areas of improvement in Construction Junction's two-part business model, we conducted a <b>comprehensive review of their social media channels, spoke with Construction Junction employees and shoppers, and also surveyed local community members</b> as to whether people even knew about Construction Junction.</p><br>
-                <img  id="peep" src="images/CJ/socialanalysis.png" alt="Image placeholder" class="img-fluid" width="110%">
+                To find areas of improvement in Construction Junction's two-part business model, we conducted a <b>comprehensive review of their social media channels, spoke with Construction Junction employees and shoppers, and also surveyed local community members</b> as to whether people even knew about Construction Junction.</p>
+              </div>
+              <div class="col-md-12">
+                <br>
+                <img src="images/CJ/socialanalysis.png" alt="Image placeholder" class="img-fluid" width="80%">
+              </div>
+              <div class="col-md-12">
+                <br>
+                <p class="description1">The key takeaway was that they market themselves as mostly a buying and selling platform. They are currently <b>not promoting events and their conservation goals on any other site except for their  main website</b>, which is visited least often in comparison to Facebook and Instagram.</p>
+              </div>
+              <div class="col-md-12">
+                <br>
+                <p id="subheader">Stakeholder Analysis</p>
+                <p class="description1">We then proceeded to understand the stakeholders of Construction Junction, paring down the community into four main groups internal and external to Construction Junction:<br></br><b>Environment</b> - the companies that have partnerships with CJ and have similar missions<br><b>Internal</b> - the multiple groups that work together to help Construction Junction function properly<br><b>Education</b> - home to 68 colleges and universities, targeting students, teachers, and faculty<br><b>Local</b> - groups that Construction Junction caters to such as the government, homeowners, and DIYers. On the map, larger bubbles indicate opportunities and overlaps represent parties that have some connection to each other. </p><br>
+                <img src="images/CJ/stakeholdermap.png" alt="Image placeholder" class="img-fluid" width="60%">
+              </div>
+              <div class="col-md-12">
+                <br></br>
+                <p id="subheader">Narrowing the Problem</p>
+                <p class="description1">From the social media analysis, it was evident that Construction Junction is <b>not successful in promoting their events and goals to help teach the community about reuse.</b> Thus, our team narrowed it down to two main spaces: focusing on environmental groups and education.</p>
+                <img src="images/CJ/questions.png" alt="Image placeholder" class="img-fluid" width="40%"><br></br>
+                <p class="description1">We chose to focus on the <b>education market</b> for several reasons over environments:<br><b>Reach</b> to a much larger group of people (parents, students at varying levels, teachers, faculty, coaches<br><b>Give back</b> to the community of Pittsburgh with 68+ schools and universities<br><b>Excitement</b> for potential opportunities that could lie ahead</p>
+              </div>
+              <div class="col-md-12">
+                <br>
+                <p id="rowoverview2">03 Ideation</p>
+                <p class="description1">After narrowing down on the Education space, our team had to come up with some way to use a mobile service to engage educators and students with conservation education. We brainstormed questions to identify key opportunities.</p>
+                <img src="images/CJ/questions2.png" alt="Image placeholder" class="img-fluid" width="40%"><br></br>
+                <p class="description1">We also used <b>Reverse Assumptions</b> to understand what kinds of mobile services would help us answer these questions</p>
               </div>
 
 
@@ -137,8 +164,10 @@
 
 
 
-                <!-- <strong><a href="https://framer.cloud/ZIOOL" style="color:black">Click to View Final Prototype</a></strong> -->
 
+
+                <!-- <strong><a href="https://framer.cloud/ZIOOL" style="color:black">Click to View Final Prototype</a></strong> -->
+<!--
             <div class="row mb-5">
               <div class="col-md-6">
                 <p id="rowoverview2">02 Exploratory Research</p>
@@ -222,17 +251,17 @@
         </div>
       </div>
 
-
+-->
     <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 text-md-left text-center">
             <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
             <div class="container text-center">
-              <p align="left">Copyright 2018-2019 © Simran Jobanputra</p>
+              <p align="left" id="copyright">Copyright 2018-2019 © Simran Jobanputra</p>
             </div>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
           </p>
           </div>
         </div>
