made changes to construction junction

--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -103,7 +103,7 @@
                   <iframe width="500" height="300" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br></br>
 
                   <p class="description1">Junction Journey would not only be training the next generation, but would<br>also be penetrating <b>a much larger audience in Pittsburgh: schools and<br>educators</b> - simply by their interaction with children on a daily basis.</p><br>
-                   <a href="junctionjourney.html#finalprototype"><img src="images/CJ/conceptbutton.png" alt="Image placeholder" width="30%"></a>
+                  <a href="junctionjourney.html#finalprototype"><img src="images/CJ/conceptbutton.png" alt="Image placeholder" width="30%"></a>
              </div>
              <!--section 3-->
              <div class="col-md-6">
@@ -153,9 +153,50 @@
               <div class="col-md-12">
                 <br>
                 <p id="rowoverview2">03 Ideation</p>
-                <p class="description1">After narrowing down on the Education space, our team had to come up with some way to use a mobile service to engage educators and students with conservation education. We brainstormed questions to identify key opportunities.</p>
+                <p class="description1">After narrowing down on the Education space, our team had to come up with some way to use a mobile service to engage educators and students with conservation education. We brainstormed questions in four categories to identify key opportunities.</p>
                 <img src="images/CJ/questions2.png" alt="Image placeholder" class="img-fluid" width="40%"><br></br>
-                <p class="description1">We also used <b>Reverse Assumptions</b> to understand what kinds of mobile services would help us answer these questions</p>
+                <p class="description1">We also used <b>Reverse Assumptions</b> to understand what kinds of mobile services would help us answer these questions</p><br>
+                <img src="images/CJ/reverseassumptions.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+                <p class="description1">The reverse assumptions exercise was helpful in coming up with ideas for our service. Since community is really important to CJ and host a variety of educational opportunities such as site visits, we decided to hone in on schools and particularly the idea of conservation education. We came up with different problem areas within education.</p>
+
+                <p id="subheader">Problem Statement Development</p>
+                <p class="description1">Our team came up with 20+ problem statements, voted on our top three, and combined them into one central problem statement.<br></br><b>Top Three:</b><br>We don't have resuability drives in local schools<br>Schools don't understand exactly what we can do for them/how they could benefit<br>We don't have a virtual presence with the younger population of Pittsburgh<br></br><b>Combined Statement:</b><br><b>We don't have a virtual presence with local students in Pittsburgh to share and engage them in our vision</b></p>
+
+                <p id="subheader">Concept Development</p>
+                <p class="description1">There were some key questions we had to answer to work with the problem statement:<br></br>01 What <b>age group</b> of students should we target?<br>02 What’s <b>in it for students</b> to get involved with Construction Junction’s mission?<br> 03 How can we <b>improve the way they are giving out information</b> of their reuse mission?<br>We came up with some ideas to further define the considerations and the problem statement.</p>
+                <img src="images/CJ/concept.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+                <p class="description1">Why is this method effective?</p>
+                <img src="images/CJ/whyitworks.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+
+                <p id="subheader">Roundtable Brainstorming</p>
+                <p class="description1">We first did a roundtable brainstorm session. Each person in our group was given one page and 60 seconds to draw potential ideas for the screens. Then we rotated when the timer rang. This helped us get all of our thoughts out on paper, so we could have a meaningful discussion about the direction of our mobile app. We also created plans for how we wanted to setup our app prior to low-fi sketching.</p>
+                <img src="images/CJ/roundtable.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+                <img src="images/CJ/plan.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+              </div>
+              <div class="col-md-6">
+               <p id="subheader">Initial Sketches</p>
+              </div>
+              <div class="col-md-6"></div>
+              <div class="col-md-6">
+               <p class="description1">Features:<br><b>AR Scanning</b> - Students can scan local furniture to see how a specific furniture piece could be reused<br><b>Chat-Bot</b> - Interact with our CJ Mascot to ask questions about tutorials/learn or about our products<br><b>Learn</b> - Have online lessons regarding the environment and conservative education<br><b>School Page</b> - See how your school is doing in comparison with competitors and also see current events<br><b>Donations + How</b> - How do we do donations/how do people collect points for their donations<br><b>Mascot</b> - Learn about our Beaver Mascot, CJ!</p>
+               -draw inspiration board of mascots (tony the tiger on kellog's products, mario for nintendo, pacman, pickachu)
+              </div>
+              <div class="col-md-6">
+                <img src="images/CJ/lowfi.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+                <p class="description1"
+
+                have a picture of the color study//
+              </div>
+              <div class="col-md-12">
+
+              Our goal is to foster a love for reuse and recycling in our community’s children through competitive games, challenges, and technology experiences. In turn, we hope to college valuable data about our youth, educate them about reuse, and build Construction Junction’s brand value.
+
+
+                <img src="images/CJ/charterschool.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+
+
+
+                <p id="rowoverview2">04 Iteration</p>
               </div>
 
 
@@ -248,6 +289,7 @@
               <p class="text">We then brainstormed questions we could answer to address our problem statement and solidify our mobile service model. The ones highligthed below led us into understanding some key opportunities for increasing awareness through a mobile application.</p>
             </div>
             <p class="text-center mb-5"><img src="images/CJ/opps.jpg" alt="Image placeholder" class="img-fluid" width="60%"></p>
+
         </div>
       </div>
 
@@ -260,6 +302,7 @@
 
             <div class="container text-center">
               <p align="left" id="copyright">Copyright 2018-2019 © Simran Jobanputra</p>
+
             </div>
 
           </p>
