--- a/miranda.html
+++ b/miranda.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Strategy &mdash; Free Portfolio Template by Colorlib</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/aos.min.css">
     <link rel="stylesheet" href="css/hamburgers/hamburgers.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/animsition.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <!--  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -48,65 +48,90 @@
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <!-- <div class="col-md-14" data-aos="fade-up" > -->
-            <img src="images/CUI/CUI2.jpg" alt="Image placeholder" width="1280" height="750">
+            <img src="images/CJ/Artboard.jpg" alt="Image placeholder" width="1280" height="750">
        <!--    </div> -->
         </div>
       </div>
     </section>
-    <!-- END templateux-hero -->
-
-    <section class="templateux-portfolio-overlap mb-5" id="next">
+    <!-- END templateux-hero  -->
+   <section class="templateux-portfolio-overlap mb-5" id="next">
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
+          <!--intro section-->
           <div class="col-md-14">
+            <p id="rowoverview2">01 Overview</p>
             <div class="row work-detail">
               <div class="col-md-3">
                 <span class=caption>Team</span>
-                <strong>Ke Zheng, Ken St. Clair</strong>
+                <p class="description1">Kenneth St. Clair, Ke Zheng</p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Time</span>
-                <strong>2 Weeks</strong>
+                <p class="description1">3 Weeks, Fall 2017</p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Tools</span>
-                <strong>After Effects, Videography, Invision, Figma, Think Alouds</strong>
+                <p class="description1">iMovie, Adobe After Effects, CUI Modeling Software</p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Role</span>
-                <strong>Model Creation + Script Writing + Video Editing</strong>
+                <p class="description1">CUI Design and Modeling + Script Development</p>
               </div>
               <br></br>
               <div class="col-md-8">
-                <span class=caption id="rowoverview">Project Ask</span>
-                <p class="description1">Design a conversational user interface to enhance the retail experience.</p>
+                <span class=caption id="rowoverview">Project Overview</span>
+                <p class="description1">This project was part of my Beginner Interaction Design Studio. Teams were given the ability to select a domain from a shortlist.</p>
               </div>
               <div class="col-md-8">
-                <span class=caption id="rowoverview">Project Overview</span>
-                <p class="description1">This project was part of my Advanced Interaction Design studio. The main goal was to better understand chatbots and conversational user interfaces and how they could contribute to improving problems in the retail experience, especially given the massive shift to online shopping. A big question for my team was understanding how we could reinvogorate people to shop in stores.<br></br>MORE CONTENT COMING SOON!</p>
+                <span class=caption id="rowoverview">Problem Summary</span>
+                <p class="description1">Design a conversational user interface for the retail domain.</p>
               </div>
-            </div>
+              <div class="col-md-8">
+                <span class=caption id="rowoverview">Impact</span>
+                <p class="description1">This project was not market tested but it made me super interested in Conversation Design - I'm taking a class in it as we speak!</p>
+              </div>
           </div>
-          <img src="images/CJ/breakline.jpg" id="break" width=1268>
+<!--section 2-->
+ <div class="row mb-5">
+              <div class="col-md-6">
+                <p id="rowoverview2">02 Solution</p>
+                  <p class="description1">The convenience of online shopping has stagnated the number of shoppers coming into stores and malls. Our goal was two-fold:<br></br><b>1) to get more shoppers in stores</b><br><b>2) to make the shopping experience more enjoyable</b></p>
+              </div>
+              <div class="col-md-6">
+                  <img id="onlinefacts" src="images/miranda/onlineshopfacts.png" alt="Image placeholder" class="img-fluid" width="75%">
+              </div>
+              <div class="col-md-12">
+                  <br></br>
+                  <p class="description1">Miranda is a <b>conversational user interface that reinvigorates the joy of in-store shopping by building an experience that elevates department stores</b> - personalizing the shopping experience for the customer and making inventory management and customer service easier for floor associates.</b></p>
+              </div>
+              <div class="col-md-12">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/8sVhzP1IaEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <p class="description1">The CUI serves as a "front stage" manager as shoppers peruse the storefront while the stylist is the "backstage manager" in the fitting and trials area.</p>
+                  <img src="images/CJ/reuse.png" alt="Image placeholder" class="img-fluid" width="80%">
 
+
+
+
+
+<!--footer-->
       <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 text-md-left text-center">
             <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
             <div class="container text-center">
-              <!-- <p align="left">Copyright 2018-2019 © Simran Jobanputra</p> -->
+              <p align="left" id="copyright">Copyright 2018-2019 © Simran Jobanputra</p>
+
             </div>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
           </p>
           </div>
         </div>
       </div>
     </footer>
-
   <script src="js/scripts-all.js"></script>
   <script src="js/main.js"></script>
-
   </body>
 </html>
