--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="css/animsition.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="carousel.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
       #link { color: #A9A9A9; }
       #link2 {color:#000000;}
@@ -48,7 +53,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
-            <h1 id="homepage"><font color="#A9A9A9">Hi, I'm Simran!</font><br></br>As a designer, I want to be able to use technology to alleviate<br>societal problems. I aspire to bridge function + aesthetic using<br>my backgrounds in business + design. Currently, I'm looking for fulltime UX Roles.<br><br>Learn more about my work below!</h1>
+            <h1 id="homepage"><font color="#A9A9A9">Hi, I'm Simran!</font><br></br>As a designer, I want to be able to use technology to alleviate<br>societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using<br>my backgrounds in business <font color="#DAA520">+</font> design.</font> Currently, I'm looking for fulltime UX Roles.<br><br>Learn more about my work below!</h1>
             <a href="#work" class="go-down js-smoothscroll"></a>
           </div>
         </div>
@@ -72,7 +77,7 @@
             </a>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="nasa.html">
+            <a class="project animsition-link" href="nasanew.html">
               <figure>
                 <img src="images/CUI/CUI1.jpg" alt="Free Template" class="img-fluid">
               </figure>
@@ -86,7 +91,7 @@
           </div>
         </div>
         <!-- END row -->
-          <div class="row">
+        <div class="row">
           <div class="col-md-6" data-aos="fade-up">
             <a class="project animsition-link" href="miranda.html">
               <figure>
@@ -94,7 +99,7 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Miranda Ai</h2>
+                  <h2>Miranda Ai x Human</h2>
                   <h4>Conversational User Interface Design</h4>
                 </div>
               </div>
@@ -114,113 +119,120 @@
             </a>
           </div>
         </div>
-        <!-- END row -->
-                <!-- END row -->
-          <div class="row">
+        <div class="row">
           <div class="col-md-6" data-aos="fade-up">
-            <a class="project animsition-link" href="miranda.html">
+            <a class="project animsition-link" href="tiles.html">
               <figure>
                 <img src="images/CUI/CUI1.jpg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Rideshare+</h2>
-                  <h4>User Centered Research and Evaluation</h4>
+                  <h2>Tactile Tiles</h2>
+                  <h4>Survey Design + Physical Prototyping</h4>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="darpa.html">
+          <div class="col-md-6" data-aos="fade-up">
+            <a class="project animsition-link" href="newlemon.html">
               <figure>
-                <img src="images/DARPA/DARPA1.jpg" alt="Free Template" class="img-fluid">
+                <img src="images/CUI/CUI1.jpg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>DARPA - HCI Capstone</h2>
-                  <h4>Desktop Interaction Design</h4>
+                  <h2>Lemon</h2>
+                  <h4>User Research + Branding + POC</h4>
                 </div>
               </div>
             </a>
           </div>
         </div>
-        <!-- END row -->
-      </div>
     </section>
     <!-- END section -->
-    <section class="templateux-section" id="play">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-4" data-aos="fade-up">
-          </div>
-          <div class="col-md-8" data-aos="fade-up" data-aos-delay="100">
+            <div class="row" id="play">
+              <div class="col-md-7">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
 
-            <div class="row">
-              <div class="col-md-12">
-                <h1 class="mb-5">Outside of the classroom, I enjoy a wide variety of activities.</h1>
+  <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/miranda/frontback.png" alt="Los Angeles">
+                  </div>
+
+                  <div class="item">
+                    <img src="images/miranda/model.png" alt="Chicago">
+                  </div>
+
+                  <div class="item">
+                    <img src="ny.jpg" alt="New York">
+                  </div>
+                </div>
+
+  <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
               </div>
             </div>
 
-            <div class="row  pt-sm-0 pt-md-5 mb-5">
+               <!--  <div class="mySlides fade">
+                  <div class="images/miranda/featureintro.png">1 / 3</div>
+                  <img src="img1.jpg" style="width:100%">
+                  <div class="text">Caption Text</div>
+                </div>
 
-              <div class="col-lg-6">
-                <div class="media templateux-media mb-4">
-                  <div class="mr-4 icon">
-                    <figure>
-                      <img src="images/play/thumb1.png" alt="Free Template" class="img-fluid">
-                    </figure>
-                  </div>
-                  <div class="media-body">
-                    <h3 class="h5"><font color="#DAA520">Web Development</font></h3>
-                    <p id="link2">I recently started doing freelance web development + rebranding. My current project is rebranding <a id="link"href=https://fcobgyn.com/><b>fcobgyn.com</b></a>, which I intend to finish by November 2019. I really enjoy making small businesses feel more confident about their services or products.</p>
-                  </div>
+                <div class="mySlides fade">
+                  <div class="numbertext">2 / 3</div>
+                  <img src="images/miranda/frontback.png" style="width:100%">
+                  <div class="text">Caption Two</div>
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="media templateux-media mb-4">
-                  <div class="mr-4 icon">
-                    <figure>
-                      <img src="images/play/thumb2.png" alt="Free Template" class="img-fluid">
-                    </figure>
-                  </div>
-                  <div class="media-body">
-                    <h3 class="h5"><font color="#DAA520">Dancing</font></h3>
-                    <p id="link2">I have been dancing since a really young age. On campus, I co-founded a team called Sahara, which has grown from 3 to 30 members and am involved in both hip hop and contemporary pieces through other organizations.
-                    <a id="link" href=https://www.youtube.com/results?search_query=cmu+sahara><b>Competition Pieces</b></a></p>
-                  </div>
-                </div>
-              </div>
 
-              <div class="col-lg-6">
-                <div class="media templateux-media mb-4">
-                  <div class="mr-4 icon">
-                    <figure>
-                      <img src="images/play/thumb3.png" alt="Free Template" class="img-fluid">
-                    </figure>
-                  </div>
-                  <div class="media-body">
-                    <h3 class="h5"><font color="#DAA520">Entrepreneurship</font></h3>
-                    <p id="link2">I have been involved with several entreprenuerial side projects in the past. One of my coolest ventures was the <a id="link" href="https://www.thecollegeessayist.com/"><b>College Essayist</b></a>, where I virtually worked with all founders across the country to make college preparation tools free + more accessible to all high school students.</p>
-                  </div>
+                <div class="mySlides fade">
+                  <div class="numbertext">3 / 3</div>
+                  <img src="images/miranda/model.png" style="width:100%">
+                  <div class="text">Caption Three</div>
                 </div>
-              </div>
-              <div class="col-lg-5">
+
+ Next and previous buttons -->
+                <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+
+The dots/circles -->
+                <!-- <div style="text-align:center">
+                  <span class="dot" onclick="currentSlide(1)"></span>
+                  <span class="dot" onclick="currentSlide(2)"></span>
+                  <span class="dot" onclick="currentSlide(3)"></span>
+                </div> -->
+       <!--        </div> -->
+
+
+  <!-- Indicators -->
+
+<!--end of carousel-->
+              <div class="col-md-4" id="play">
+                <br></br>
+                <h1>I love working on side projects to propel my<br>design skills forward.</h1>
                 <div class="media templateux-media mb-4">
-                  <div class="mr-4 icon">
-                    <figure>
-                      <img src="images/play/thumb4.png" alt="Free Template" class="img-fluid">
-                    </figure>
-                  </div>
-                  <div class="media-body">
-                    <h3 class="h5"><font color="#DAA520">Visual Design</font></h3>
-                    <p id="link2">One of the main goals I have during my masters program is to increase my visual skills. I'm working on projects related to color, typography, and sketching/drawing. A link to some of my pieces coming soon!</p>
-                  </div>
+                </div>
+                <div class="media-body">
+                  <h3 class="h5"><font color="#DAA520">Visual Design</font></h3>
+                  <p id="link2">I'm working on projects related to color, typography, sketching/drawing, and product design to complement my knowledge in product strategy.</p>
+                  <h3 class="h5"><font color="#DAA520">Web Development</font></h3>
+                  <p id="link2">I recently started doing freelance web development + rebranding. I enjoy making small businesses and brands feel more confident about their services or products.</p>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
     </section>
     <!-- END section -->
     <!-- END section -->
@@ -228,10 +240,10 @@
       <div class="container">
         <div class="row">
           <div class="column" data-aos="fade-up">
+            <br></br>
             <h6 class="section-heading mt-3"><font color="#DAA520">About Me</font></h6>
             <p id="aboutme">My name is Simran Jobanputra and I'm a current student at Carnegie Mellon pursuing a Masters in Human Computer Interaction. In May 2019, I also graduated with my bachelors in Business and Human Computer Interaction from Carnegie Mellon. I recently interned at NASA AMES as a UX Designer, where I worked on an application called Playbook in order to create timesaving features and shortcuts for astronauts.<br></br>
-            Growing up as a first-generation Indian American in the city of Chicago, I have always embraced being a part of two completely distinct perspectives in order to solve a complicated puzzle. For this reason, I'm passionate about coming up with innovative solutions that can serve the needs of many different communities.
-            Please feel free to reach out to me at sjobanpu@cs.cmu.edu!</p>
+            Growing up as a first-generation Indian American in the city of Chicago, I have always embraced being a part of two completely distinct perspectives in order to solve a complicated puzzle. For this reason, I'm passionate about coming up with innovative solutions that can serve the needs of many different communities. Outside of the classroom, I'm super involved in the dance community and even started my own team, <a href="https://www.youtube.com/results?search_query=cmu+sahara"><font color="#A9A9A9">CMU Sahara</font></a>. I also loved getting involved in entrepreneurship and building out new ideas.<br></br>Please feel free to reach out to me to collaborate or give any feedback at sjobanpu@cs.cmu.edu!</p>
           </div>
           <div class="column" data-aos="fade-up">
             <img id="photo" src="images/Profile.png" alt="Free Template" width="80%">
@@ -239,6 +251,7 @@
         </div>
       </div>
     </section>
+
     <!-- END call to action -->
     <footer class="templateux-footer">
       <div class="container-fluid">
@@ -246,7 +259,7 @@
           <div class="col-md-6 text-md-left text-center">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
            <div class="container text-center">
-            <p align="left">Copyright 2018-2019 © Simran Jobanputra</p>
+            <p align="left">Copyright 2019-2020 © Simran Jobanputra</p>
           </div>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </div>
