--- a/miranda.html
+++ b/miranda.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/animsition.min.css">
+    <script type="text/javascript" src="main.js"></script>
    <!--  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
@@ -47,8 +48,7 @@
     <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
-          <!-- <div class="col-md-14" data-aos="fade-up" > -->
-            <img src="images/CJ/Artboard.jpg" alt="Image placeholder" width="1280" height="750">
+            <img src="images/miranda/retail.png" alt="Image placeholder" width="1280" height="750">
        <!--    </div> -->
         </div>
       </div>
@@ -88,27 +88,75 @@
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Impact</span>
-                <p class="description1">This project was not market tested but it made me super interested in Conversation Design - I'm taking a class in it as we speak!</p>
+                <p class="description1">This project was not market tested but it made me super interested in Conversation Design - I'm taking a class on it as we speak!</p>
               </div>
           </div>
 <!--section 2-->
  <div class="row mb-5">
               <div class="col-md-6">
                 <p id="rowoverview2">02 Solution</p>
-                  <p class="description1">The convenience of online shopping has stagnated the number of shoppers coming into stores and malls. Our goal was two-fold:<br></br><b>1) to get more shoppers in stores</b><br><b>2) to make the shopping experience more enjoyable</b></p>
+                  <p class="description1">The convenience of <b>online shopping has stagnated the number of in-store shoppers</b>. Our goal was two-fold:<br></br>
+                  <ul class="description1">
+                  <li>to get more shoppers in stores</li><br>
+                  <li>to make the shopping experience more enjoyable</li>
+                  </ul></p>
               </div>
               <div class="col-md-6">
                   <img id="onlinefacts" src="images/miranda/onlineshopfacts.png" alt="Image placeholder" class="img-fluid" width="75%">
               </div>
-              <div class="col-md-12">
+              <div class="col-md-6">
                   <br></br>
-                  <p class="description1">Miranda is a <b>conversational user interface that reinvigorates the joy of in-store shopping by building an experience that elevates department stores</b> - personalizing the shopping experience for the customer and making inventory management and customer service easier for floor associates.</b></p>
+                  <p class="description1">Miranda is a <b>conversational user interface that reinvigorates the joy of in-store shopping by building an experience that elevates department stores.</b><br></br></p>
+                  <ul class="description1">
+                    <li>personalizing the shopping experience for the customer</li><br>
+                    <li>making inventory management + customer service easier for floor associates</li>
+                  </ul>
               </div>
-              <div class="col-md-12">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/8sVhzP1IaEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="col-md-6">
+                <iframe id="onlinefacts2" width="560" height="315" src="https://www.youtube.com/embed/8sVhzP1IaEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-              <p class="description1">The CUI serves as a "front stage" manager as shoppers peruse the storefront while the stylist is the "backstage manager" in the fitting and trials area.</p>
-                  <img src="images/CJ/reuse.png" alt="Image placeholder" class="img-fluid" width="80%">
+              <!--solution carousel-->
+               <div class="row" id="play">
+              <div class="col-md-7">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+
+  <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/miranda/feature intro.png" alt="Los Angeles">
+                  </div>
+
+                  <div class="item">
+                    <img src="images/miranda/frontback.png" alt="Chicago">
+                  </div>
+
+                  <div class="item">
+                    <img src="images/miranda/model.png" alt="New York">
+                  </div>
+                </div>
+
+  <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+<!--end of carousel-->
+
+             <!--<div class="col-md-6">
+                <img src="images/miranda/frontback.png" alt="Image placeholder" class="img-fluid" width="60%">
+              </div>-->
+</div>
 
 
 
