--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
-            <h1 id="homepage"><font color="#A9A9A9">Hi, I'm Simran!</font><br></br>As a designer, I want to be able to use technology to alleviate<br>societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using<br>my backgrounds in business <font color="#DAA520">+</font> design.</font> Currently, I'm looking for fulltime UX Roles.<br><br>Learn more about my work below!</h1>
+            <h1 id="homepage"><font color="#A9A9A9">Hi, I'm Simran!</font><br></br>As a designer, I want to be able to use technology to alleviate<br>societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using<br>my backgrounds in business <font color="#DAA520">+</font> design.</font> Currently, I'm looking for fulltime UX and Product Roles.<br><br>Learn more about my work below!</h1>
             <a href="#work" class="go-down js-smoothscroll"></a>
           </div>
         </div>
@@ -79,7 +79,7 @@
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <a class="project animsition-link" href="nasanew.html">
               <figure>
-                <img src="images/CUI/CUI1.jpg" alt="Free Template" class="img-fluid">
+                <img src="images/NASA/playbook.png" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
@@ -123,7 +123,7 @@
           <div class="col-md-6" data-aos="fade-up">
             <a class="project animsition-link" href="tiles.html">
               <figure>
-                <img src="images/CUI/CUI1.jpg" alt="Free Template" class="img-fluid">
+                <img src="images/tiles/blind.jpg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
@@ -136,7 +136,7 @@
           <div class="col-md-6" data-aos="fade-up">
             <a class="project animsition-link" href="newlemon.html">
               <figure>
-                <img src="images/CUI/CUI1.jpg" alt="Free Template" class="img-fluid">
+                <img src="images/lemon/food.jpg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
@@ -161,11 +161,11 @@
   <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img src="images/miranda/frontback.png" alt="Los Angeles">
+                    <img src="" alt="Los Angeles">
                   </div>
 
                   <div class="item">
-                    <img src="images/miranda/model.png" alt="Chicago">
+                    <img src="" alt="Chicago">
                   </div>
 
                   <div class="item">
