--- a/miranda.html
+++ b/miranda.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/animsition.min.css">
     <script type="text/javascript" src="main.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
    <!--  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
@@ -114,31 +117,30 @@
               </div>
               <div class="col-md-6">
                 <iframe id="onlinefacts2" width="560" height="315" src="https://www.youtube.com/embed/8sVhzP1IaEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="description1">Concept Video</p>
               </div>
-              <!--solution carousel-->
-               <div class="row" id="play">
-              <div class="col-md-7">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#myCarousel" data-slide-to="1"></li>
-                  <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
+              <div class="col-md-9" id="modeltothemiddle">
+                  <br>
+                  <p id="subheader">Model Visuals</p>
+                  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner" width="50%">
+                    <div class="item active">
+                      <img src="images/miranda/featureintro.png" alt="Los Angeles">
+                    </div>
 
-  <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <img src="images/miranda/feature intro.png" alt="Los Angeles">
-                  </div>
+                    <div class="item">
+                      <img src="images/miranda/frontback.png" alt="Chicago">
+                    </div>
 
-                  <div class="item">
-                    <img src="images/miranda/frontback.png" alt="Chicago">
-                  </div>
-
-                  <div class="item">
-                    <img src="images/miranda/model.png" alt="New York">
-                  </div>
-                </div>
+                    <div class="item">
+                      <img src="images/miranda/model.png" alt="New York">
+                    </div>
+              </div>
 
   <!-- Left and right controls -->
                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
@@ -151,14 +153,29 @@
                 </a>
               </div>
             </div>
-<!--end of carousel-->
+            <div class="col-md-9" id="modeltothemiddle">
+                <p class="description1">The CUI serves as the "front stage" handling logistical concerns while the stylist manages the "back stage" or the customer relationship.</p>
+            </div>
+            <div class="col-md-6">
+                <br>
+                <p id="rowoverview2">03 Approach</p>
+                <p id="subheader">Research</p>
+                <p class="description1"><b>Voice-based Competitors</b>Prior to building a CUI, our team took a deep dive into understanding the current market and features that make certain products stand out over others. We looked at chatbots and in-home devices, such as Alexa and Siri.</p>
+            </div>
+            <div class="col-md-6"></div>
 
-             <!--<div class="col-md-6">
-                <img src="images/miranda/frontback.png" alt="Image placeholder" class="img-fluid" width="60%">
-              </div>-->
-</div>
 
 
+                <p id="subheader">Initial Design</p>
+                <p id="subheader">Evaluation & Iteration</p>
+                <p id="subheader">Final Prototype</p>
+                <p id="rowoverview2">04 Reflection + Future Steps</p>
+                <p id="rowoverview2">05 Links</p>
+
+
+
+Reflection + Future Steps
+Links
 
 
 
